# ccmake

./: CMakeLists.txt
include/test1/: Test1.h  Test2.h  Utils.h
source/test1/: Test1.cpp  Test2.cpp  main.cpp
tests/test1/: main_test.cpp
